# car_drift_teleoperation

audibot_description/urdf/: audibot.urdf.xacro
audibot_gazebo/: CMakeLists.txt  package.xml
audibot_gazebo/launch/: audibot.launch.py
audibot_gazebo/msg/: CarStatus.msg
car_status/: package.xml  setup.cfg  setup.py
car_status/car_status/: car_status_node.py
car_teleop/: package.xml  setup.py
car_teleop/car_teleop/: teleop.py
car_teleop/launch/: teleop.launch.py
